# Camst

./: .gitignore  pyproject.toml
src/camst/: __init__.py  camera.py  main.py  recorder.py  web.py  webrtc.py
src/camst/templates/: _recording_card.html  _recordings_list.html  index.html  recordings.html
