[project]
name = "camst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mokuichi147", email = "38586357+Mokuichi147@users.noreply.github.com" }
]
requires-python = ">=3.12.10"
dependencies = [
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "typer>=0.25.1",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
# OAK-D LITE を使う場合のみインストールする（Leap Motion などUVCカメラには不要）。
oak = [
    "depthai>=3.5.0",
]

[project.scripts]
camst = "camst.main:cli"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# Raspberry Pi (ARMv6/armv6l) ではPyPIにwheelが無いため、Pi向けビルド済みwheelを
# 提供する piwheels を併用する。PyPIにwheelがある環境(mac等)ではそのままPyPIが優先される。
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
