[project]
name = "camst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mokuichi147", email = "38586357+Mokuichi147@users.noreply.github.com" }
]
requires-python = ">=3.12.10"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "typer>=0.25.1",
    "uvicorn>=0.46.0",
    # av / opencv は Raspberry Pi(armv6l) では piwheels にビルド済みwheelがある
    # バージョンに揃える必要がある。また Pi はヘッドレス運用のため GUI依存(libGL等)が
    # 不要な opencv-python-headless を使う。それ以外(mac等)は従来どおり最新のGUI版。
    "av>=16.1.0; platform_machine != 'armv6l'",
    "av>=16.0.0,<16.1; platform_machine == 'armv6l'",
    "opencv-python>=4.13.0.92; platform_machine != 'armv6l'",
    "opencv-python-headless>=4.12,<4.13; platform_machine == 'armv6l'",
]

[project.optional-dependencies]
# OAK-D LITE を使う場合のみインストールする（Leap Motion などUVCカメラには不要）。
oak = [
    "depthai>=3.5.0",
]

[project.scripts]
camst = "camst.main:cli"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# Raspberry Pi (ARMv6/armv6l) ではPyPIにwheelが無いため、Pi向けビルド済みwheelを
# 提供する piwheels を併用する。PyPIにwheelがある環境(mac等)ではそのままPyPIが優先される。
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
